# guitar-book

./: .gitignore  README.md  pyproject.toml
data/: .~lock.ultimate.csv#  base.csv
notebooks/boiteachansons/: 00-Boite-find_url.ipynb  00-find_url.ipynb  01-Boite-find_author_song.ipynb  01-find_author copy.ipynb  02-Boite-dowload-raw.ipynb  02-dowload-raw.ipynb  boite_a_chansons.ipynb
notebooks/ultimateguitar/: 00-Ultimate-find_url.ipynb  02-Boite-dowload-raw.ipynb
notebooks/video/: 00-Youtube-find_url.ipynb  00-find_url.ipynb  01-Youtube-download-mp3.ipynb
sandbox/: car.py  sqlite.py  threading.py
src/: chords.py  cleaners.py  extractors.py  helpers.py  loaders.py  loggers.py  managers.py  models.py  scrappers.py  threaders.py
src/cleaners/: __init__.py  text_cleaner.py  url_cleaner.py
src/extractors/: __init__.py  url_extractors.py
src/loaders/: __init__.py
src/managers/: __init__.py  author_manager.py  helpers.py  url_manager.py
src/models/: __init__.py  base.py  tables.py  utils.py
src/scrappers/: __init__.py  artist_bio_scrapper.py  song_tab_scrapper.py  song_video_scrapper.py
src/transformers/: __init__.py
src/url_finders/: __init__.py  artist_url_finder.py  song_url_finder.py
src/validators/: __init__.py
tests/: test_chords.py  test_cleaners.py  test_scrapper.py  test_selenium.py  test_url_finders.py  test_validators.py
utils/: pre-push.sh  push.sh
